src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/NVConditionalRender_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVConditionalRender_StringErrorContext.class */
public final class NVConditionalRender_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBeginConditionalRenderNV(II)V", "net/labymod/core/laby3d/opengl/error/generated/NVConditionalRenderErrorContext");
        methods.put("glEndConditionalRenderNV()V", "net/labymod/core/laby3d/opengl/error/generated/NVConditionalRenderErrorContext");
        return methods;
    }
}
